packages/sapling_visitor/tests/snapshots/basic_test__uppercase_function_transform.snap
---
source: packages/sapling_visitor/tests/basic_test.rs
expression: result.code
---
"use client";
const style = (values: unknown): string => {
	return "";
};
const Test = () => {
	return <div className={style({})}>Test</div>;
};
export default Test;
